--- a/common/init.css
+++ b/common/init.css
@@ -21,7 +21,7 @@ img {
 #title-caps-red {
 	color: #C20C0C;
 	font-size: 2em;
-	font-family: Cursive, Times, Monospace, MS Pmincho, SimSun;
+	font-family: Georgia, Times, Monospace, MS Pmincho, SimSun;
 	font-variant: small-caps;
 		}
 #copyright-white {
