--- a/common/init.css
+++ b/common/init.css
@@ -1,8 +1,8 @@
-body::selection{
+::-webkit-selection{
 	color: #DDDDFF;
 	background: #4B9EFF;
 		}
-body::-moz-selection{
+::-moz-selection{
 	color: #DDDDFF;
 	background: #4B9EFF;
 		}
@@ -21,7 +21,7 @@ img {
 #title-caps-red {
 	color: #C20C0C;
 	font-size: 2em;
-	font-family: Georgia, Times, Monospace, MS Pmincho, SimSun;
+	font-family: Georgia, Times, MS Pmincho, SimSun;
 	font-variant: small-caps;
 		}
 #copyright-white {
