--- a/common/init.css
+++ b/common/init.css
@@ -60,3 +60,10 @@ width:512px;
 	color: white;
 	text-shadow: 0.3em 0.3em 0.3em #FFFF00;	
 	}
+#poemstyle {
+	color: #FFFFFF;
+	background: #4B9EFF;
+	text-align: center;
+	text-decoration: none;
+	font-family:Simsun,Arial,MS Pmincho,Georgia;
+	font-size: 200%;
