--- a/common/init.css
+++ b/common/init.css
@@ -60,7 +60,7 @@ width:512px;
 	color: white;
 	text-shadow: 0.3em 0.3em 0.3em #FFFF00;	
 	}
-#poemstyle {
+#poem {
 	color: #FFFFFF;
 	background: #4B9EFF;
 	text-align: center;
