--- a/common/init.css
+++ b/common/init.css
@@ -68,3 +68,4 @@ width:512px;
 	font-family:Simsun,Arial,MS Pmincho,Georgia;
 	font-size: 200%;
 	}
+#center { MARGIN-RIGHT: auto; MARGIN-LEFT: auto; }
