--- a/common/init.css
+++ b/common/init.css
@@ -16,7 +16,7 @@ body {
 	text-align: center;
 	text-decoration: none;
 	font-family: Century Gothic, Arial, MS Pmincho, SimSun, MS Mincho, Georgia;
-	font-variant: small-caps;
+	font-variant: normal;
 	font-size: 100%;
 	font-weight: 600;
 }
