--- a/common/init.css
+++ b/common/init.css
@@ -1,6 +1,6 @@
 body {
-	color: #000000; /*#993300;*/
-	background: rgba(235, 115, 64, 1); /*#9E9E9E;*/
+	color: #640000;
+	background: rgba(64, 115, 253, 20);
 	text-align: center;
 	text-decoration: none;
 	font-family: Century Gothic, Arial, MS Pmincho, SimSun, MS Mincho, Georgia;
