--- a/common/init.css
+++ b/common/init.css
@@ -1,6 +1,6 @@
 body {
 	color: #640000;
-	background: #FE7210; /*rgba(54, 180, 54, 1);*/
+	background: #3C8D0D; /*rgba(54, 180, 54, 1);*/
 	text-align: center;
 	text-decoration: none;
 	font-family: Century Gothic, Arial, MS Pmincho, SimSun, MS Mincho, Georgia;
