--- a/common/init.css
+++ b/common/init.css
@@ -56,7 +56,7 @@ img {
 	background: #4B9EFF;
 	text-align: center;
 	text-decoration: none;
-	font-family: Simsun, Times New Roman, Arial, Yu Mincho, MS Pmincho, Georgia;
+	font-family: SimSun, Times New Roman, Arial, Yu Mincho, MS Pmincho, Georgia;
 	font-size: 200%;
 }
 #div-center {
