--- a/common/init.css
+++ b/common/init.css
@@ -1,6 +1,6 @@
 body {
 	color: #640000;
-	background: #586069; /*rgb(235,50,50);*/ /*rgba(54, 180, 54, 1);*/
+	background: #D6001C; /*#586069;*/ /*rgb(235,50,50);*/ /*rgba(54, 180, 54, 1);*/
 	text-align: center;
 	text-decoration: none;
 	font-family: Source Sans Pro, Source Han Sans JP, Source Han Sans TW, Source Han Sans CN, Source Sans, Noto Sans, Source Serif Pro, Source Han Serif JP, Source Han Serif TW, Source Han Serif CN, Source Serif, Noto Serif, Times New Roman, Arial, Yu Mincho, MS Pmincho, SimSun, MS Mincho, Georgia;
