--- a/common/init.css
+++ b/common/init.css
@@ -1,5 +1,5 @@
 body {
-	color: #640000;
+	color: #640000; /*#F2DDCC*/
 	background: linear-gradient(#E66465, #9198E5); /*#667FFF;*/ /*#D6001C;*/ /*#586069;*/ /*rgb(235,50,50);*/ /*rgba(54, 180, 54, 1);*/
 	text-align: center;
 	text-decoration: none;
