--- a/common/init.css
+++ b/common/init.css
@@ -1,3 +1,21 @@
+// Variable font
+@font-face {
+  font-family: "Honeymoon Variable";
+  src: url("/fonts/ABCHoneymoonVariableEdu-Regular.woff2") format("woff2-variations"),
+       url("/fonts/ABCHoneymoonVariableEdu-Regular.woff") format("woff-variations");
+}
+// Fallback static font
+@font-face {
+  font-family: "Honeymoon";
+  font-weight: normal;
+  src: url("/fonts/ABCHoneymoonEdu-Regular.woff2") format("woff2"),
+       url("/fonts/ABCHoneymoonEdu-Regular.woff") format("woff");
+}
+/*
+body {
+  font-family: "Honeymoon Variable", "Honeymoon", sans-serif;
+}
+*/
 body {
 	color: #640000; /*#F2DDCC*/
 	background: linear-gradient(#E66465, #9198E5); /*#667FFF;*/ /*#D6001C;*/ /*#586069;*/ /*rgb(235,50,50);*/ /*rgba(54, 180, 54, 1);*/
