--- a/common/init.css
+++ b/common/init.css
@@ -1,15 +1,15 @@
 // Variable font
 @font-face {
-	font-family: 'Honeymoon Variable';
-	src:	url('fonts/ABCHoneymoonVariableEdu-Regular.woff2') format('woff2-variations'),
-		url('fonts/ABCHoneymoonVariableEdu-Regular.woff') format('woff-variations');
+	font-family: Honeymoon Variable;
+	src:	url(fonts/ABCHoneymoonVariableEdu-Regular.woff2) format('woff2-variations'),
+		url(fonts/ABCHoneymoonVariableEdu-Regular.woff) format('woff-variations');
 }
 // Fallback static font
 @font-face {
-	font-family: 'Honeymoon';
+	font-family: Honeymoon;
 	font-weight: normal;
-	src:	url('common/fonts/ABCHoneymoonEdu-Regular.woff2') format('woff2'),
-		url('common/fonts/ABCHoneymoonEdu-Regular.woff') format('woff');
+	src:	url(common/fonts/ABCHoneymoonEdu-Regular.woff2) format('woff2'),
+		url(common/fonts/ABCHoneymoonEdu-Regular.woff) format('woff');
 }
 /*
 body {font-family: "Honeymoon Variable", "Honeymoon", sans-serif;}
